Bug 1845104 Default theme bugs
- removing some redundant styles in default
- inbox message was too long for font to display in single line
- putting some styles back into raw instead
- search form in header wasn't fitting on single line on small device

behatnotneeded

(cherry picked from commit b67ca83f57342427800d67d846753a1c686fec2c)

--- a/htdocs/theme/default/sass/_custom.scss
+++ b/htdocs/theme/default/sass/_custom.scss
@@ -6,7 +6,7 @@
     // Ensure background-color isn't visible when comments aren't enabled
     .comment-container {
       h3 {
-        padding: 36px 15px 0 15px;
+        padding: 30px 15px 0 15px;
       }
       hr {
         margin: 0 15px;
