--- a/htdocs/theme/default/sass/components/_btn.scss
+++ b/htdocs/theme/default/sass/components/_btn.scss
@@ -2,10 +2,6 @@
 .forum-post-btns {
     border-top: 1px dotted #ececec;
     padding: 10px;
-
-    a {
-        color: $theme-primary-color;
-    }
 }
 
 .btn-secondary, .drag-default-button {
