--- a/htdocs/theme/default/sass/components/_list-group.scss
+++ b/htdocs/theme/default/sass/components/_list-group.scss
@@ -1,8 +1,6 @@
 .list-group-item-link {
     a {
-        color: $link-color;
         &:hover {
-            color: $link-hover-color;
             background-color: scale-color($theme-primary-color, $lightness: 90%);
         }
     }
@@ -16,14 +14,5 @@
 .list-group-item {
     &.published {
         background-color: #fff;
-    }
-    .list-group-item-controls,
-    .btn-action-list,
-    .list-group-item-heading {
-        &.btn-group-top {
-            @include media-breakpoint-up(lg) {
-                margin-top: -13px;
-            }
-        }
     }
 }
