--- a/htdocs/theme/default/sass/typography/_tables.scss
+++ b/htdocs/theme/default/sass/typography/_tables.scss
@@ -1,8 +1,7 @@
 .table {
     td {
-        h3 {
+        h3.title {
             font-weight: 400;
-            font-family: $font-family-sans-serif;
         }
     }
 }
